# Processamento-de-Imagens

./: .gitignore  README  brilho_contraste.py  escala_cinza.py  main.py  pyproject.toml
